# kys-pig3

./: .gitignore  readme.md  复制新文件-开发用.bat
bin-c/: CMakeLists.txt  PotDll.h  kys-pig3-c.sln  kys-pig3-c.vcxproj  kys-pig3-c.vcxproj.filters  kys_battle.cpp  kys_battle.h  kys_draw.cpp  kys_draw.h  kys_engine.cpp  kys_engine.h  kys_event.cpp  kys_event.h  kys_main.cpp  kys_main.h  kys_script.cpp  kys_script.h  kys_type.cpp  kys_type.h  lua52.h  main.cpp  smallpot.lib
bin-pas/: keyword.txt  kys_battle.pas  kys_engine.pas  kys_event.pas  kys_main.pas  kys_pig3.lpi  kys_script.pas  kys_type.pas
game/list/: lover.txt
game/script/: 1.lua  2.lua  3.lua  4.lua
game0/script/: 1.lua
kys-pig3-androidstudio/: build.gradle  compile_so_apk_cpp.bat  complie_so_apk.bat  complie_so_apk_pas.bat
kys-pig3-androidstudio/app/: build.gradle  complie_so.bat  cppig3so.bat
kys-pig3-androidstudio/app/jni/: CMakeLists.txt  说明.txt
kys-pig3-androidstudio/app/jni/simplecc/: CMakeLists.txt  dllmain.cpp  simplecc.vcxproj
kys-pig3-androidstudio/app/jni/src/: CMakeLists.txt  main.c
kys-pig3-androidstudio/app/src/main/: AndroidManifest.xml
kys-pig3-androidstudio/app/src/main/java/org/libsdl/app/: SDLActivity.java
kys-pig3-androidstudio/app/src/main/res/values/: strings.xml
pig3/game/script/: 1.lua  2.lua  3.lua  4.lua
pig3/game/script/event/: ka1.lua  ka10.lua  ka100.lua  ka1000.lua  ka1001.lua  ka1002.lua  ka1003.lua  ka1005.lua  ka1006.lua  ka1007.lua  ka1008.lua  ka1009.lua  ka101.lua  ka1010.lua  ka1011.lua  ka1012.lua  ka1013.lua  ka1014.lua  ka1015.lua  ka1016.lua  ka1017.lua  ka1018.lua  ka1019.lua  ka102.lua  ka1020.lua  ka1021.lua  ka1022.lua  ka1023.lua  ka1024.lua  ka1025.lua  ka1026.lua  ka1027.lua  ka1028.lua  ka1029.lua  ka103.lua  ka1030.lua  ka1031.lua  ka1032.lua  ka1033.lua  ka1034.lua  (+1613 more)
pig3/game0/script/: 1.lua
pig3/game0/script/event/: ka1.lua  ka10.lua  ka100.lua  ka1000.lua  ka1001.lua  ka1002.lua  ka1003.lua  ka1004.lua  ka1005.lua  ka1006.lua  ka1007.lua  ka1008.lua  ka1009.lua  ka101.lua  ka1010.lua  ka1011.lua  ka1012.lua  ka1013.lua  ka1014.lua  ka1015.lua  ka1016.lua  ka1017.lua  ka102.lua  ka103.lua  ka104.lua  ka105.lua  ka108.lua  ka109.lua  ka11.lua  ka110.lua  ka111.lua  ka112.lua  ka113.lua  ka114.lua  ka115.lua  ka116.lua  ka117.lua  ka118.lua  ka119.lua  ka12.lua  (+935 more)
tools/pig3Launcher/pig3Launcher/: Form1.cs
tools/simplecc/: simplecc.sln  simplecc.vcxproj  simplecc.vcxproj.filters
tools/初始存档生成工具/: ranger.xlsx
